all api def
