# controllers/User.js
@@ -1,11 +1,11 @@
 'use strict';
 
 var utils = require('../utils/writer.js');
-var Task = require('../service/TaskService');
+var User = require('../service/UserService');
 
 module.exports.addTask = function addTask (req, res, next) {
   var body = req.swagger.params['body'].value;
-  Task.addTask(body)
+  User.addTask(body)
     .then(function (response) {
       utils.writeJson(res, response);
     })
@@ -14,9 +14,20 @@ module.exports.addTask = function addTask (req, res, next) {
     });
 };
 
-module.exports.getPetById = function getPetById (req, res, next) {
+module.exports.getTaskStatus = function getTaskStatus (req, res, next) {
   var taskId = req.swagger.params['taskId'].value;
-  Task.getPetById(taskId)
+  User.getTaskStatus(taskId)
+    .then(function (response) {
+      utils.writeJson(res, response);
+    })
+    .catch(function (response) {
+      utils.writeJson(res, response);
+    });
+};
+
+module.exports.login = function login (req, res, next) {
+  var name = req.swagger.params['name'].value;
+  User.login(name)
     .then(function (response) {
       utils.writeJson(res, response);
     })
