# service/TaskService.js
@@ -1,30 +1,0 @@
-'use strict';
-
-
-/**
- * add task
- * 
- *
- * body Body Updated user object
- * no response value expected for this operation
- **/
-exports.addTask = function(body) {
-  return new Promise(function(resolve, reject) {
-    resolve();
-  });
-}
-
-
-/**
- * Find pet by ID
- * Returns a single pet
- *
- * taskId Long ID of pet to return
- * no response value expected for this operation
- **/
-exports.getPetById = function(taskId) {
-  return new Promise(function(resolve, reject) {
-    resolve();
-  });
-}
-
