# service/UserService.js
@@ -1,0 +1,44 @@
+'use strict';
+
+
+/**
+ * add task
+ * 洗濯物登録
+ *
+ * body Task Updated user object
+ * no response value expected for this operation
+ **/
+exports.addTask = function(body) {
+  return new Promise(function(resolve, reject) {
+    resolve();
+  });
+}
+
+
+/**
+ * Find task by ID
+ * タスク状態検索
+ *
+ * taskId Long task id
+ * no response value expected for this operation
+ **/
+exports.getTaskStatus = function(taskId) {
+  return new Promise(function(resolve, reject) {
+    resolve();
+  });
+}
+
+
+/**
+ * login
+ * ログイン
+ *
+ * name String 
+ * no response value expected for this operation
+ **/
+exports.login = function(name) {
+  return new Promise(function(resolve, reject) {
+    resolve();
+  });
+}
+
